@@ -1,5 +1,10 @@
 [b]Version 0.6.7[/b]:
 
+(2009-03-06)
+ * The media type icons (type_audio.png, type_dvd.png, type_url.png, 
+   type_video.png, type_cdda.png, type_unknown.png and type_vcd.png) which 
+   appear in the info window can now be overridden by the icon themes.
+
 (2009-03-05)
  * (Playlist) Try to figure out if a file is local (when the file is added
    to the playlist) not using QFile::exists, as it seems it can be slow
